--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "init-project": "npm install && npm run init:dirs && npm run init:files && npm run init:gitignore",
+    "init-project": "npm install && npm-run-all init:*",
     "init:dirs": "mkdirp sass css vendor images js",
     "init:files": "touch README.md index.html sass/style.scss js/script.js",
     "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run test:html",
+    "test:html": "html-validate *.html"
   },
   "keywords": [],
-  "author": "",
+  "author": "Krzysztof Fila",
   "license": "ISC",
   "devDependencies": {
-    "mkdirp": "^1.0.4"
+    "mkdirp": "^1.0.4",
+    "npm-run-all": "^4.1.5"
   }
 }
