--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "init:files": "touch README.md index.html sass/style.scss js/script.js",
     "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
     "test": "npm run test:html",
-    "test:html": "html-validate *.html"
+    "test:html": "html-validate *.html",
+    "build": "npm-run-all build:* test",
+    "build:sass": "node-sass --output-style compact -o css sass",
+    "build:autoprefixer": "autoprefixer-cli css/style.css"
   },
   "keywords": [],
   "author": "Krzysztof Fila",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer-cli": "^1.0.0",
     "mkdirp": "^1.0.4",
+    "node-sass": "^4.13.1",
     "npm-run-all": "^4.1.5"
   }
 }
