--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "build:sass": "node-sass --output-style compact -o css sass",
     "build:autoprefixer": "autoprefixer-cli css/style.css",
     "build:dev": "npm-run-all build-dev:sass build:autoprefixer",
-    "build-dev:sass": "node-sass --output-style expanded --source-map true -o css sass"
+    "build-dev:sass": "node-sass --output-style expanded --source-map true -o css sass",
+    "watch:browsersync": "browser-sync start --server --files \"css/*.css\" \"*.html\"",
+    "watch:sassprefixer": "onchange sass/*.scss -- npm run build-dev"
   },
   "keywords": [],
   "author": "Krzysztof Fila",
@@ -23,6 +25,7 @@
     "autoprefixer-cli": "^1.0.0",
     "mkdirp": "^1.0.4",
     "node-sass": "^4.13.1",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "onchange": "^6.1.0"
   }
 }
