--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "build": "npm-run-all build:* test",
     "build:sass": "node-sass --output-style compact -o css sass",
     "build:autoprefixer": "autoprefixer-cli css/style.css",
-    "build:dev": "npm-run-all build-dev:sass build:autoprefixer",
+    "build-dev": "npm-run-all build-dev:sass build:autoprefixer",
     "build-dev:sass": "node-sass --output-style expanded --source-map true -o css sass",
+    "watch": "npm-run-all build:* build-dev -p watch:*",
     "watch:browsersync": "browser-sync start --server --files \"css/*.css\" \"*.html\"",
     "watch:sassprefixer": "onchange sass/*.scss -- npm run build-dev"
   },
@@ -23,6 +24,8 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer-cli": "^1.0.0",
+    "browser-sync": "^2.26.7",
+    "html-validator": "^5.1.8",
     "mkdirp": "^1.0.4",
     "node-sass": "^4.13.1",
     "npm-run-all": "^4.1.5",
